--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "lodash": "^4.17.11",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
+  },
+  "dependencies": {
+    "web3": "1.0.0-beta.38"
   }
 }
